<package format="2">
  <name>darpasubt</name>
  <version>0.1.0</version>
  <description>Package for testing specific objects.</description>
  <maintainer email="todo@todo.todo">todo</maintainer>
  <license>todo</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>key_teleop</depend>
</package>
